sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:18: error: '<-' expected but ')' found.
		for (i < - getNombreValeurs - 2 to 0 by - 1)
                                                           ^AlgCocktailSort1:32: error: illegal start of simple expression
	}
        ^